# applied-hands-on-computer-vision

./: .gitignore  README.md  image-dataset-curation-with-specialist-models-LeNet5.ipynb  image_dataset_curation_with_foundation_and_specialist_models_mnist_clip_vs_lenet5.ipynb  pyproject.toml
Assignment-1/: image-dataset-curation-with-specialist-models-LeNet5.ipynb  requirements.txt
Assignment-1/checkpoints/level_10/: best_binary.pth  best_multiclass.pth  (+1 more)
Assignment-2/: README.md  subset_splits.json
Assignment-2/checkpoints/: lidar-only_best_model.pt
Assignment-2/notebooks/: 01_dataset_exploration.ipynb  02_fusion_exploration.ipynb  03_strided_conv_ablation.ipynb  04_final_assessment.ipynb
Assignment-2/scripts/: download_data.py
Assignment-3/: 05_CLIP.ipynb  README.md
Assignment-3/notebooks/: 05_a_clip_conditional_classifier_free_diffusion_guidance.ipynb  05_b_classifier_free_diffusion_evaluation.ipynb  05_bonus_idk_classifier.ipynb
Assignment-3/scripts/: download_data.py
Assignment-3/utils/: UNet_utils.py  ddpm_utils.py
checkpoints/: best_lenet.pth
checkpoints/level_10/: best_binary.pth  best_multiclass.pth  best_multilabel.pth
checkpoints/level_2/: best_binary.pth  best_multiclass.pth  best_multilabel.pth
checkpoints/level_20/: best_binary.pth  best_multiclass.pth  best_multilabel.pth
src/handsoncv/: datasets.py  evaluation.py  metrics.py  models.py  training.py  utils.py  visualization.py
src/handsoncv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_datasets.py  test_models.py  test_training.py  test_utils.py
(+3921 files in other folders)
